--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "description": "Limited integer class.",
   "main": "dist/index.js",
+  "type": "commonjs",
+  "types": "./dist/index.d.ts",
   "umd:main": "dist/index.umd.js",
   "module": "dist/index.mjs",
-  "source": "src/index.js",
+  "source": "src/index.ts",
   "scripts": {
     "test": "jest",
     "prebuild": "npm run test",
     "build": "microbundle",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "tsc": "tsc",
+    "watch": "tsc --watch"
   },
   "keywords": [
     "integer",
@@ -20,6 +24,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.19",
     "babel-jest": "^27.5.1",
     "eslint": "^8.9.0",
@@ -27,7 +32,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
     "microbundle": "^0.14.2",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   },
   "lint-staged": {
     "*.js": [
