--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "./dist/index.d.ts",
   "umd:main": "dist/index.umd.js",
   "module": "dist/index.mjs",
+  "exports": "./dist/index.js",
   "source": "src/index.ts",
   "scripts": {
     "test": "jest",
