--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "limited-int",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Limited integer class.",
   "main": "dist/index.js",
   "type": "commonjs",
@@ -8,6 +8,10 @@
   "umd:main": "dist/index.umd.js",
   "module": "dist/index.mjs",
   "source": "src/index.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ivsaez/limited-int.git"
+  },
   "scripts": {
     "test": "jest",
     "prebuild": "npm run test",
